# pycounts_jdh

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_jdh/: __init__.py
tests/: einstein.txt  test_pycounts_jdh.py
