[tool.poetry]
name = "pycounts_jdh"
version = "0.1.0"
description = "This package will calculate word counts in a text file"
authors = ["Jonah Hamilton"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.4.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
